# ImageCaptioningModel

question_2/: main.py
question_2/my_package/: pyproject.toml  setup.py
question_2/my_package/data/: dataset.py  download.py
question_2/my_package/data/transforms/: blur.py  crop.py  main.py  rescale.py
question_2/my_package/my_package.egg-info/: PKG-INFO  SOURCES.txt
