[project]
name = "my_package"
version = "0.0.1"
authors = [
  { name="Harsh Sharma", email="harshsharma2024@gmail.com" },
]
description = "Python DS Assignment"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

